BREAKING FIX: Displayed readme in About.jsx and changed website layout elements
- Removed SignIn.jsx and SignOut.jsx
- Added Settings.jsx
- Added new route path "/settings" for Settings.jsx
- New packages include
  * wooorm/starry-night: Syntax highlighting using TextMate grammars in JavaScript.
  * github-markdown-css: Styles GitHub-flavored Markdown for consistent rendering.
  * rehype-slug: Adds id attributes to headings for easier linking.
  * rehype-starry-night: Uses starry-night for syntax highlighting in Markdown with rehype.
  * remark-toc: Generates a table of contents from Markdown headings.
- Refactored README.md and updated ACK section
- Updated Footer.jsx and Header.jsx
- github-markdown-css/github-markdown.css will add github flavored markdown while displaying README.md on website
- Changed default background markdown-body classname
- Updated About.jsx to read README.md, transform from markdown to html , add style for codes and display in the style of github flavored markdown

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
   font-family: "Poppins", sans-serif;
   color-scheme: dark;
 }
+
+.markdown-body, [data-theme="dark"] {
+  --bgColor-default: "#171717";
+  --bgColor-muted: #262626;
+}
