--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,25 @@
   color-scheme: dark;
 }
 
-.markdown-body, [data-theme="dark"] {
-  --bgColor-default: "#171717";
-  --bgColor-muted: #262626;
+@media (prefers-color-scheme: dark) {
+  .markdown-body, [data-theme="dark"] {
+    /* dark */
+    color-scheme: dark;
+    --bgColor-default: "#171717";
+    --bgColor-muted: #262626;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .markdown-body, [data-theme="light"] {
+    /* light */
+    color-scheme: light;
+    --bgColor-default: "#171717";
+    --bgColor-muted: #262626;
+    --fgColor-default: #f0f6fc;
+    --fgColor-muted: #9198a1;
+    --fgColor-accent: #4493f8;
+    --borderColor-default: #3d444d;
+    --borderColor-muted: #3d444db3;
+  }
 }
